2002-07-19
 - Wiki: Added the editTag page, that prevented from editing feedback area on locked pages (mikl)  